--- a/WitAi.DotNet.Api/WitAi.DotNet.Api.csproj
+++ b/WitAi.DotNet.Api/WitAi.DotNet.Api.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Piero De Tomi</Authors>
     <Company>Piero De Tomi</Company>
-    <Description>A .NET library that implements most of wit.ai API calls.</Description>
+    <Description>A .NET library that implements most of wit.ai API features.
+GitHub repo as https://github.com/pierodetomi/wit-ai-dotnet-api.</Description>
     <PackageIconUrl>https://raw.githubusercontent.com/pierodetomi/wit-ai-dotnet-api/master/__assets/package-logo.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/pierodetomi/wit-ai-dotnet-api</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
@@ -12,6 +13,7 @@
     <PackageLicenseUrl>https://raw.githubusercontent.com/pierodetomi/wit-ai-dotnet-api/master/LICENSE</PackageLicenseUrl>
     <PackageTags>.net, c#, wit.ai, api</PackageTags>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
